# pas-co2-rs

./: Cargo.toml  README.md
.github/workflows/: build.yaml
examples/stm32f4/: Cargo.toml  rust-toolchain.toml
examples/stm32f4/src/: main.rs
src/: lib.rs  regs.rs
src/regs/: interrupt_config.rs  measurement_mode.rs  measurement_status.rs  mod.rs  status.rs
