[package]
name = "pas-co2-rs"
version = "0.1.0-beta.1"
edition = "2021"
authors = [
    "Joel Schulz-Andres <joel@systemscape.de>",
    "Julian Dickert <julian@systemscape.de>",
]
description = "Inofficial Rust driver for Infineon PAS CO2 sensor"
license = "MIT"
categories = ["no-std", "embedded", "sensor", "co2"]

readme = "README.md"
repository = "https://github.com/Systemscape/pas-co2-rs"

[features]
default = ["defmt"]
defmt = ["dep:defmt", "embedded-hal/defmt-03"]

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal = "1.0.0"

[badges]
maintenance = { status = "actively-developed" }