[package]
edition = "2021"
name = "stm32f4-example"
license = "MIT"

[dependencies]
# Change stm32f429zi to your chip name, if necessary.
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "daaaf50298144a245d026e70f4fa3c6eb856276a", features = [
    "defmt",
    "stm32f469ni",
    "memory-x",
    "unstable-pac",
    "time-driver-any",
    "exti"
] }

embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "daaaf50298144a245d026e70f4fa3c6eb856276a", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }

embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "daaaf50298144a245d026e70f4fa3c6eb856276a", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

panic-probe = "0.3.2"

embedded-hal = "1.0"

pas-co2-rs = { path = "../../", features = ["defmt"] }


[profile.release]
debug = 2
